# imu_gps_localization

./: CMakeLists.txt
imu_gps_localizer/: CMakeLists.txt
imu_gps_localizer/include/imu_gps_localizer/: base_type.h  gps_processor.h  imu_gps_localizer.h  imu_processor.h  initializer.h  utils.h
imu_gps_localizer/src/: gps_processor.cpp  imu_gps_localizer.cpp  imu_processor.cpp  initializer.cpp
ros_wrapper/include/: localization_wrapper.h
ros_wrapper/launch/: imu_gps_localization.launch
ros_wrapper/src/: localization_node.cpp  localization_wrapper.cpp
